MSGED TE (TOBI'S EDITION) 06 - DOCUMENTATION OF NEW FEATURES AND CHANGES
========================================================================

Features, Changes and Fixes in the current development version of MsgEd
-----------------------------------------------------------------------

Changes:

- Reorganized the Makefiles, please read doc/README.Mak !!!

- Changed the semantics of AssumeCharset. Now it also works for mails that
  do have a charset kludge, but the charset is unknown. This seems to be
  necessary in Russia especially ("AssumeCharset CP866").

- Reworked the Alt+D (Ctrl+Y) delete line function in the editor. Previously,
  if you pressed Ctrl+Y and were at the very last line of the message, the
  line would be killed and the cursor would move up, so that if you pressed
  Ctrl+Y again, the previous line would also be killed. Now, the last line
  will only be cleared and the cursor will remain there. So that you cannot
  accidentally delete text above the line where you started to press Ctrl+Y.
  If you do not like the new behaviour, add "Switch Carthy Off" to the confi-
  guration file in order to revert to the old behaviour.


Features:
=========

- JAM Support. Still experimental. Thanks to Fedor Lizunkov.

- Character set translate now does not only recode the mail text, but also
  the message header (from, to, and subject field). This allows for umlauts
  or kyrillic letters in the header, provided the recipient mail editor also
  has this feature.

- New Switch: DirectList. If you put "Switch DirectList On" into your config
  file, you will directly drop into the message listing mode when entering a
  message area, instead of the individual message reading mode like it is the
  default.

- New keyword: Printer. Specifies the printer port (OS/2, DOS, Windows)
  resp. the lpr options (UNIX) to use for printing (Alt+W, Print).
  Default is "PRN" on OS/2, DOS and Windows, and an empty string ("lpr -" is